2024R2/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v241/Ansys/ACT/Common/BrowserQt.md
# `BrowserQt`

<a id="ansys.mechanical.stubs.v241.Ansys.ACT.Common.BrowserQt"></a>

#### *class* Ansys.ACT.Common.BrowserQt

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

BrowserQt class.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Methods

| Name | Description |
|-----------------------------------------------------------------------|------------------------------------|
| [`BeginInvoke`](#BrowserQt.BeginInvoke)                               | BeginInvoke method.                |
| [`BringToFront`](#BrowserQt.BringToFront)                             | BringToFront method.               |
| [`Dispose`](#BrowserQt.Dispose)                                       | Dispose method.                    |
| [`EndInvoke`](#BrowserQt.EndInvoke)                                   | EndInvoke method.                  |
| [`FindParentDialog`](#BrowserQt.FindParentDialog)                     | FindParentDialog method.           |
| [`FindParentWindow`](#BrowserQt.FindParentWindow)                     | FindParentWindow method.           |
| [`FindTopMostParentControl`](#BrowserQt.FindTopMostParentControl)     | FindTopMostParentControl method.   |
| [`Focus`](#BrowserQt.Focus)                                           | Focus method.                      |
| [`GetPreferredHeightForWidth`](#BrowserQt.GetPreferredHeightForWidth) | GetPreferredHeightForWidth method. |
| [`GetPreferredSize`](#BrowserQt.GetPreferredSize)                     | GetPreferredSize method.           |
| [`Hide`](#BrowserQt.Hide)                                             | Hide method.                       |
| [`Invalidate`](#BrowserQt.Invalidate)                                 | Invalidate method.                 |
| [`Invoke`](#BrowserQt.Invoke)                                         | Invoke method.                     |
| [`Refresh`](#BrowserQt.Refresh)                                       | Refresh method.                    |
| [`SendToBack`](#BrowserQt.SendToBack)                                 | SendToBack method.                 |
| [`Show`](#BrowserQt.Show)                                             | Show method.                       |
| [`Update`](#BrowserQt.Update)                                         | Update method.                     |

### Properties

| Name | Description |
|-------------------------------------------------|---------------------------|
| [`BackColor`](#BrowserQt.BackColor)             | BackColor property.       |
| [`Bounds`](#BrowserQt.Bounds)                   | Bounds property.          |
| [`Controls`](#BrowserQt.Controls)               | Controls property.        |
| [`Cursor`](#BrowserQt.Cursor)                   | Cursor property.          |
| [`Enabled`](#BrowserQt.Enabled)                 | Enabled property.         |
| [`Focused`](#BrowserQt.Focused)                 | Focused property.         |
| [`Font`](#BrowserQt.Font)                       | Font property.            |
| [`ForeColor`](#BrowserQt.ForeColor)             | ForeColor property.       |
| [`Height`](#BrowserQt.Height)                   | Height property.          |
| [`InvokeRequired`](#BrowserQt.InvokeRequired)   | InvokeRequired property.  |
| [`IsDisposed`](#BrowserQt.IsDisposed)           | IsDisposed property.      |
| [`IsMouseCaptured`](#BrowserQt.IsMouseCaptured) | IsMouseCaptured property. |
| [`Left`](#BrowserQt.Left)                       | Left property.            |
| [`Location`](#BrowserQt.Location)               | Location property.        |
| [`Margins`](#BrowserQt.Margins)                 | Margins property.         |
| [`MaximumSize`](#BrowserQt.MaximumSize)         | MaximumSize property.     |
| [`MinimumSize`](#BrowserQt.MinimumSize)         | MinimumSize property.     |
| [`Name`](#BrowserQt.Name)                       | Name property.            |
| [`Parent`](#BrowserQt.Parent)                   | Parent property.          |
| [`PreferredSize`](#BrowserQt.PreferredSize)     | PreferredSize property.   |
| [`Size`](#BrowserQt.Size)                       | Size property.            |
| [`Tag`](#BrowserQt.Tag)                         | Tag property.             |
| [`ToolTipText`](#BrowserQt.ToolTipText)         | ToolTipText property.     |
| [`Top`](#BrowserQt.Top)                         | Top property.             |
| [`Visible`](#BrowserQt.Visible)                 | Visible property.         |
| [`Width`](#BrowserQt.Width)                     | Width property.           |

<a id="property-detail"></a>

## Property detail

<a id="BrowserQt.BackColor"></a>

### *property* BrowserQt.BackColor *: Ansys.Utilities.Color | [None](https://docs.python.org/3/library/constants.html#None)*

BackColor property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Bounds"></a>

### *property* BrowserQt.Bounds *: Ansys.UI.Toolkit.Drawing.Rectangle | [None](https://docs.python.org/3/library/constants.html#None)*

Bounds property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Controls"></a>

### *property* BrowserQt.Controls *: Ansys.UI.Toolkit.ControlCollection | [None](https://docs.python.org/3/library/constants.html#None)*

Controls property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Cursor"></a>

### *property* BrowserQt.Cursor *: Ansys.UI.Toolkit.Cursor | [None](https://docs.python.org/3/library/constants.html#None)*

Cursor property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Enabled"></a>

### *property* BrowserQt.Enabled *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

Enabled property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Focused"></a>

### *property* BrowserQt.Focused *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

Focused property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Font"></a>

### *property* BrowserQt.Font *: Ansys.UI.Toolkit.Drawing.Font | [None](https://docs.python.org/3/library/constants.html#None)*

Font property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.ForeColor"></a>

### *property* BrowserQt.ForeColor *: Ansys.Utilities.Color | [None](https://docs.python.org/3/library/constants.html#None)*

ForeColor property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Height"></a>

### *property* BrowserQt.Height *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Height property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.InvokeRequired"></a>

### *property* BrowserQt.InvokeRequired *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

InvokeRequired property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.IsDisposed"></a>

### *property* BrowserQt.IsDisposed *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

IsDisposed property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.IsMouseCaptured"></a>

### *property* BrowserQt.IsMouseCaptured *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

IsMouseCaptured property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Left"></a>

### *property* BrowserQt.Left *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Left property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Location"></a>

### *property* BrowserQt.Location *: Ansys.UI.Toolkit.Drawing.Point | [None](https://docs.python.org/3/library/constants.html#None)*

Location property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Margins"></a>

### *property* BrowserQt.Margins *: Ansys.UI.Toolkit.Padding | [None](https://docs.python.org/3/library/constants.html#None)*

Margins property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.MaximumSize"></a>

### *property* BrowserQt.MaximumSize *: Ansys.UI.Toolkit.Drawing.Size | [None](https://docs.python.org/3/library/constants.html#None)*

MaximumSize property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.MinimumSize"></a>

### *property* BrowserQt.MinimumSize *: Ansys.UI.Toolkit.Drawing.Size | [None](https://docs.python.org/3/library/constants.html#None)*

MinimumSize property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Name"></a>

### *property* BrowserQt.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Name property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Parent"></a>

### *property* BrowserQt.Parent *: Ansys.UI.Toolkit.Control | [None](https://docs.python.org/3/library/constants.html#None)*

Parent property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.PreferredSize"></a>

### *property* BrowserQt.PreferredSize *: Ansys.UI.Toolkit.Drawing.Size | [None](https://docs.python.org/3/library/constants.html#None)*

PreferredSize property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Size"></a>

### *property* BrowserQt.Size *: Ansys.UI.Toolkit.Drawing.Size | [None](https://docs.python.org/3/library/constants.html#None)*

Size property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Tag"></a>

### *property* BrowserQt.Tag *: Any | [None](https://docs.python.org/3/library/constants.html#None)*

Tag property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.ToolTipText"></a>

### *property* BrowserQt.ToolTipText *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

ToolTipText property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Top"></a>

### *property* BrowserQt.Top *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Top property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Visible"></a>

### *property* BrowserQt.Visible *: [bool](https://docs.python.org/3/library/functions.html#bool) | [None](https://docs.python.org/3/library/constants.html#None)*

Visible property.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Width"></a>

### *property* BrowserQt.Width *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Width property.

<!-- !! processed by numpydoc !! -->

<a id="method-detail"></a>

## Method detail

<a id="BrowserQt.BeginInvoke"></a>

### BrowserQt.BeginInvoke(method: System.Delegate, args: Any)

BeginInvoke method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.BringToFront"></a>

### BrowserQt.BringToFront()

BringToFront method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Dispose"></a>

### BrowserQt.Dispose()

Dispose method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.EndInvoke"></a>

### BrowserQt.EndInvoke(asyncResult: System.IAsyncResult)

EndInvoke method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.FindParentDialog"></a>

### BrowserQt.FindParentDialog()

FindParentDialog method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.FindParentWindow"></a>

### BrowserQt.FindParentWindow()

FindParentWindow method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.FindTopMostParentControl"></a>

### BrowserQt.FindTopMostParentControl()

FindTopMostParentControl method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Focus"></a>

### BrowserQt.Focus()

Focus method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.GetPreferredHeightForWidth"></a>

### BrowserQt.GetPreferredHeightForWidth(width: [int](https://docs.python.org/3/library/functions.html#int))

GetPreferredHeightForWidth method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.GetPreferredSize"></a>

### BrowserQt.GetPreferredSize()

GetPreferredSize method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Hide"></a>

### BrowserQt.Hide()

Hide method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Invalidate"></a>

### BrowserQt.Invalidate()

Invalidate method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Invoke"></a>

### BrowserQt.Invoke(method: System.Delegate, args: Any)

Invoke method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Refresh"></a>

### BrowserQt.Refresh()

Refresh method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.SendToBack"></a>

### BrowserQt.SendToBack()

SendToBack method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Show"></a>

### BrowserQt.Show()

Show method.

<!-- !! processed by numpydoc !! -->

<a id="BrowserQt.Update"></a>

### BrowserQt.Update()

Update method.

<!-- !! processed by numpydoc !! -->

